--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-click==8.1.2
-Flask==2.1.1
+asgiref==3.5.1
+click==8.1.3
+Django==4.0.4
+Flask==2.1.2
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
-Jinja2==3.1.1
+Jinja2==3.1.2
 MarkupSafe==2.1.1
-Werkzeug==2.1.1
+sqlparse==0.4.2
+Werkzeug==2.1.2
 zipp==3.8.0
